[gd_scene load_steps=7 format=3 uid="uid://c7jbfehk8dv33"]

[ext_resource type="Script" uid="uid://ciprcivmb2374" path="res://scripts/ShopPanel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bolgjn8o080ic" path="res://assets/test.jpg" id="2"]
[ext_resource type="AudioStream" uid="uid://j72ow22swnid" path="res://Sound/cancelled_order_2.mp3" id="2_l6wj4"]
[ext_resource type="AudioStream" uid="uid://dlwus2cqqnaof" path="res://Sound/cancelled_order_3.mp3" id="3_7hdwf"]
[ext_resource type="PackedScene" uid="uid://4bau5mgcevqm" path="res://scenes/buttun_sounds.tscn" id="3_8b1yh"]
[ext_resource type="AudioStream" uid="uid://be21trmwg1nqd" path="res://Sound/cancelled_order.mp3" id="4_xf0ew"]

[node name="ShopPanel" type="Panel"]
self_modulate = Color(0.84, 0.84, 0.84, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CancelledOrder2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l6wj4")

[node name="CancelledOrder3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7hdwf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.84, 0.84, 0.84, 1)

[node name="Window" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.45
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
color = Color(0.55, 0.75, 0.95, 1)

[node name="Sill" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.45
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2
color = Color(0.75, 0.45, 0.25, 1)

[node name="Radio" type="TextureRect" parent="Sill"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = -0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="ClientArea" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.4
anchor_right = 0.25
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2

[node name="ClientSprite" type="Sprite2D" parent="ClientArea"]
visible = false
scale = Vector2(0.5, 0.5)

[node name="ClientText" type="Label" parent="ClientArea"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "Клиент ждет!"
horizontal_alignment = 1

[node name="BottleShelf" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 7

[node name="Title" type="Label" parent="BottleShelf"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_right = 78.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Полка с товарами"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="BottleShelf"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 7
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="NoProductsLabel" type="Label" parent="BottleShelf"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -13.0
offset_right = 143.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Перетащите сюда 
готовые продукты"
horizontal_alignment = 1

[node name="OrdersPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="OrdersPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.5
offset_right = 83.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Текущий заказ"
horizontal_alignment = 1

[node name="OrdersScroll" type="ScrollContainer" parent="OrdersPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="OrdersVBox" type="VBoxContainer" parent="OrdersPanel/OrdersScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="NoOrdersLabel" type="Label" parent="OrdersPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -13.0
offset_right = 92.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Пока нет заказов"
horizontal_alignment = 1

[node name="RejectButton" type="Button" parent="OrdersPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -80.0
offset_top = -15.0
offset_right = 80.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
text = "Отклонить заказ"

[node name="DropPreview" type="Panel" parent="."]
visible = false
self_modulate = Color(0.5, 0.5, 0.5, 0.3)
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0

[node name="ButtunSounds" parent="." instance=ExtResource("3_8b1yh")]
root_path = NodePath("..")

[node name="CancelledOrder" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xf0ew")

[connection signal="gui_input" from="Sill/Radio" to="." method="_on_radio_gui_input"]
